[package]
name = "net-core"
version = "0.1.0"
edition = "2024"

[dependencies]
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.9.1", features = ["defmt", "arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.8.0", features = ["defmt", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime-ms"] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", features = ["defmt", "nrf5340-net", "peripheral"] }

cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
panic-probe = { version = "1", features = ["defmt", "print-defmt"] }
icmsg = { git = "https://github.com/0e4ef622/icmsg-rs" }
static_cell = "2.1.1"
defmt = "1.0.1"
bt-hci = { version = "0.6.0", features = ["defmt"] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
opt-level = 0

[profile.release.build-override]
codegen-units = 8
debug = true
opt-level = 0

[patch.crates-io]
# needs https://github.com/embassy-rs/bt-hci/pull/63
bt-hci = { git = "https://github.com/embassy-rs/bt-hci" }
