[package]
edition = "2021"
name = "lite1-stage1-bootloader"
version = "0.1.0"
description = "First-stage bootloader for lite1 with direct-XIP"
license = "MIT OR Apache-2.0"

[build-dependencies]
memory-spec = "0.1.0"

[dependencies]
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }
panic-probe = { version = "1.0.0", features = ["print-defmt"], optional = true }
panic-halt = "0.2"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embassy-nrf = { version = "0.9.0", features = ["nrf5340-app-s"] }
embassy-boot-nrf = "0.10.0"
embassy-sync = "0.7.2"

[features]
default = []
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:panic-probe",
    "embassy-boot-nrf/defmt",
    "embassy-nrf/defmt",
]

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
