[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = "0.7.2"
embedded-hal-async = "1.0.0"
once_cell = { version = "1.21.3", default-features = false }
paj7025 = { path = "../../../paj7025", features = ["nrf"] }
nrf-pac = { version = "0.1.0" }
static_cell = "2.1.1"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-usb = "0.5.1"
embassy-time = { version = "0.5.0", features = ["defmt-timestamp-uptime-tms"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
defmt-rtt = "1.0.0"
panic-probe = { version = "1.0.0" }
defmt = "1.0.1"
cortex-m-rt = "0.7.5"
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
embassy-embedded-hal = "0.5.0"
bytemuck = "1.24.0"
nalgebra = { version = "0.34", default-features = false }
embedded-storage = "0.3.1"
embassy-futures = { version = "0.1.2" }
postcard = { version = "1.1.3", features = [ "use-defmt" ] }
heapless = "0.9.1"
cfg-noodle = { version = "0.5", default-features = false, features = ["defmt"] }
opencv-ros-camera = { version = "0.16", default-features = false }
minicbor = { version = "2.1.1", features = ["derive"] }
minicbor-serde = { version = "0.6.1" }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[target.'cfg(context = "vm")'.dependencies]
embassy-nrf = { version = "0.8.0", features = ["nrf52840", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
bmi2 = { git="https://github.com/Abrahamh08/bmi2", branch="async", features = ["async"] }

[target.'cfg(context = "atslite1")'.dependencies]
embassy-nrf = { version = "0.8.0", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "time", "unstable-pac"] }
icm426xx = { version = "0.3.2", git = "https://github.com/Abrahamh08/icm426xx", features = ["async"] }
npm1300-rs = { git = "https://github.com/Abrahamh08/npm1300-rs", features = ["defmt-03"] }
nrf-fuel-gauge = { git = "https://github.com/Abrahamh08/nrf-fuel-gauge", features = ["nrf5340"] }
nrfxlib-sys = { git = "https://github.com/Abrahamh08/nrfxlib-sys", features = ["nrf_fuel_gauge"] }
embedded-io = { version = "0.6.1" }
embedded-io-async = { version = "0.6.1" }
trouble-host = { git = "https://github.com/embassy-rs/trouble.git", features = ["defmt", "controller-host-flow-control", "peripheral", "gatt", "derive", "security", "dev-disable-csprng-seed-requirement"] }
bt-hci = { version = "0.6.0", features = ["defmt"] }
icmsg = { git = "https://github.com/0e4ef622/icmsg-rs" }
embedded-storage-async = "0.4.1"
sequential-storage = { version = "5.0.1", features = ["defmt-03"] }

[dependencies.protodongers]
git = "https://github.com/odysseyarm/protodonge-rs"
default-features = false
features = ["minicbor", "serde-no-std", "defmt"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }

[features]
default = ["defmt"]
defmt = ["embassy-usb/defmt", "embassy-embedded-hal/defmt", "embassy-nrf/defmt", "protodongers/defmt", "panic-probe/print-defmt", "embassy-futures/defmt", "embassy-executor/defmt", "embassy-time/defmt", "postcard/defmt"]

# https://github.com/dustinblackman/cargo-run-bin
[package.metadata.bin]
probe-rs-tools = { version = "0.27.0", locked = true, bins = ["probe-rs"] }

[profile.release]
debug = 2
lto = "fat"
opt-level = "z"
codegen-units = 1
