[package]
name = "atslite-board"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
common = { path = "../../common" }
atslite-boot-api = { path = "boot-api", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-nrf = { version = "0.8.0", features = ["nrf5340-app-s", "time-driver-rtc1", "gpiote", "defmt", "unstable-pac"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt-timestamp-uptime-tms"] }
embassy-usb = { version = "0.5.1", default-features = false }
embassy-embedded-hal = "0.5.0"
embassy-futures = "0.1.2"
embassy-boot = { version = "0.6.1" }
embassy-usb-dfu = { version = "0.2.0", features = ["application", "cortex-m"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-hal-async = "1.0.0"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
panic-probe = "1.0.0"
static_cell = "2.1.1"
bytemuck = "1.24.0"
nalgebra = { version = "0.34", default-features = false, features = ["libm"] }
cfg-noodle = { git = "https://github.com/tweedegolf/cfg-noodle", default-features = false, features = ["defmt"] }
protodongers = { git = "https://github.com/odysseyarm/protodonge-rs", default-features = false, features = ["minicbor", "serde-no-std", "defmt"] }

# ATSlite-specific: ICM42688 IMU
icm426xx = { git = "https://github.com/Abrahamh08/icm426xx", default-features = false, features = ["async"] }

# ATSlite-specific: Power management
npm1300-rs = { git = "https://github.com/Abrahamh08/npm1300-rs" }
nrf-fuel-gauge = { git = "https://github.com/Abrahamh08/nrf-fuel-gauge" }
nrfxlib-sys = { git = "https://github.com/Abrahamh08/nrfxlib-sys", features = ["nrf_fuel_gauge", "nrf5340"] }

# ATSlite-specific: BLE
trouble-host = { git = "https://github.com/embassy-rs/trouble", default-features = false, features = ["defmt", "gatt", "peripheral", "derive", "security", "default-packet-pool", "dev-disable-csprng-seed-requirement"] }
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }
embassy-net-driver-channel = { git = "https://github.com/Abrahamh08/embassy" }
icmsg = { git = "https://github.com/0e4ef622/icmsg-rs" }

# PAJ sensor dependencies
paj7025 = { path = "../../../paj7025", features = ["nrf"] }

# Serialization
postcard = { version = "1.1.3", features = ["use-defmt"] }

# IO traits
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

[build-dependencies]
memory-spec = "0.3.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = "fat"         # Enable Link Time Optimization
codegen-units = 1   # Better optimization at cost of compile time
debug = 2           # Keep DWARF for probe-rs RTT locations

[patch.crates-io]
minicbor = { git = "https://github.com/Abrahamh08/minicbor" }
minicbor-derive = { git = "https://github.com/Abrahamh08/minicbor" }
minicbor-serde = { git = "https://github.com/Abrahamh08/minicbor" }
embassy-boot = { git = "https://github.com/Abrahamh08/embassy" }
embassy-usb-dfu = { git = "https://github.com/Abrahamh08/embassy", features = ["application", "cortex-m", "defmt"] }
embassy-time = { git = "https://github.com/Abrahamh08/embassy" }
embassy-time-driver = { git = "https://github.com/Abrahamh08/embassy" }
embassy-sync = { git = "https://github.com/Abrahamh08/embassy" }
embassy-futures = { git = "https://github.com/Abrahamh08/embassy" }
embassy-usb = { git = "https://github.com/Abrahamh08/embassy" }
embassy-embedded-hal = { git = "https://github.com/Abrahamh08/embassy" }
embassy-executor = { git = "https://github.com/Abrahamh08/embassy" }
embassy-nrf = { git = "https://github.com/Abrahamh08/embassy" }
embassy-net-driver-channel = { git = "https://github.com/Abrahamh08/embassy" }
nrf-pac = { git = "https://github.com/embassy-rs/nrf-pac.git", rev = "52fd51ce762a3d3a81660dea62947e6d2d1e9d91" }

[patch."https://github.com/odysseyarm/protodonge-rs"]
protodongers = { path = "../../patch/protodonge-rs" }
