[package]
edition = "2021"
name = "vm-bootloader"
version = "0.1.0"
description = "Bootloader for nRF chips"
license = "MIT OR Apache-2.0"

[build-dependencies]
memory-spec = "0.1.0"

[dependencies]
defmt = { version = "1", optional = true }
defmt-rtt = { version = "1", optional = true }

embassy-nrf = { version = "0.8.0", features = ["nrf52840"] }
embassy-boot = { version = "0.6.1" }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
embassy-sync = "0.7.2"
cortex-m-rt = "0.7.6"
cfg-if = "1.0.3"
embassy-usb-dfu = { version = "0.2.0", features = ["dfu", "cortex-m"] }
embassy-usb = { version = "0.5.1", default-features = false }
embassy-futures = "0.1.2"

[features]
defmt = [
    "dep:defmt",
    "dep:defmt-rtt",
    "embassy-boot/defmt",
    "embassy-nrf/defmt",
]
